--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Sign Up Form</title>
 </head>
 <body>
-    
+    <img src="styles/halie-west-25xggax4bSA-unsplash.jpg" class=""/>
+    <div class="odin-logo-container">
+        <img src="styles/odin-lined.png"/>
+        ODIN
+    </div>
 </body>
 </html>
