Add container for left side

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Sign Up Form</title>
 </head>
 <body>
-    <img src="styles/halie-west-25xggax4bSA-unsplash.jpg" class=""/>
-    <div class="odin-logo-container">
+    <div class="left-side-container">
+        <img src="styles/halie-west-25xggax4bSA-unsplash.jpg" class=""/>
+        <div class="odin-logo-container">
         <img src="styles/odin-lined.png"/>
-        ODIN
+            ODIN
+        </div>
     </div>
 </body>
 </html>
