--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="left-side-container">
-        <img src="styles/halie-west-25xggax4bSA-unsplash.jpg" class=""/>
+        <img src="styles/halie-west-25xggax4bSA-unsplash.jpg" class="background-image"/>
         <div class="odin-logo-container">
         <img src="styles/odin-lined.png"/>
             ODIN
         </div>
     </div>
     <div class="right-side-container">
-        
+
     </div>
 </body>
 </html>
