--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             ODIN
         </div>
     </div>
-    <div class="right-side-container">
+    <!-- <div class="right-side-container"> -->
 
     </div>
 </body>
