Add photo credits

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
             <img src="styles/odin-lined.png"/>
             ODIN
         </div>
+        <div class="photo-credits">
+            Photo by <a href="https://unsplash.com/photos/25xggax4bSA">Halie West</a> on <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a>
+        </div>
     </div>
     <!-- <div class="right-side-container"> -->
 
-    </div>
+    <!-- </div> -->
 </body>
 </html>
