Add right side content

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
             Photo by <a href="https://unsplash.com/photos/25xggax4bSA">Halie West</a> on <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a>
         </div>
     </div>
-    <!-- <div class="right-side-container"> -->
-
-    <!-- </div> -->
+    <div class="right-side-container">
+        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
+        <br>
+        <p>You <em>know</em> you want to.</p>
+        <br>
+        <br>
+        <p>Let's do this!</p>
+    </div>
 </body>
 </html>
