Add content and form

--- a/index.html
+++ b/index.html
@@ -18,12 +18,58 @@
         </div>
     </div>
     <div class="right-side-container">
-        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
-        <br>
-        <p>You <em>know</em> you want to.</p>
-        <br>
-        <br>
-        <p>Let's do this!</p>
+        <div class="form-container">
+            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
+            <br>
+            <p>You <em>know</em> you want to.</p>
+            <br>
+            <br>
+            <p>Let's do this!</p>
+            <br>
+            <form>
+                <ul>
+                    <li>
+                        <div class="input-container">
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" id="first_name" placeholder="Thor"/>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="input-container">
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email"/>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="input-container">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password"/>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <div class="input-container">
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" id="last_name" placeholder="Odinson"/>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="input-container">
+                            <label for="phone_number">PHONE NUMBER</label>
+                            <input type="tel" id="phone_number"/>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="input-container">
+                            <label for="confirm_password">CONFIRM PASSWORD</label>
+                            <input type="confirm_password" id="confirm_password"/>
+                        </div>
+                    </li>
+                </ul>
+            </form>
+        </div>
     </div>
 </body>
 </html>
