Add create account container

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                 </ul>
             </form>
         </div>
+        <div class="create-account-container">
+            <button class="create-account-button">Create Account</button>
+            <p>Already have an account? <a href="#">Log in</a></p>
+        </div>
     </div>
 </body>
 </html>
