Add class to log in

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="create-account-container">
             <button class="create-account-button">Create Account</button>
-            <p>Already have an account? <a href="#">Log in</a></p>
+            <p>Already have an account? <a href="#" class="log-in-link">Log in</a></p>
         </div>
     </div>
 </body>
