--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                     <li>
                         <div class="input-container">
                             <label for="first_name">FIRST NAME</label>
-                            <input type="text" id="first_name" placeholder="Thor"/>
+                            <input type="text" id="first_name" placeholder="Thor" required/>
                         </div>
                     </li>
                     <li>
                         <div class="input-container">
                             <label for="email">EMAIL</label>
-                            <input type="email" id="email"/>
+                            <input type="email" id="email" required/>
                         </div>
                     </li>
                     <li>
                         <div class="input-container">
                             <label for="password">PASSWORD</label>
-                            <input type="password" id="password"/>
+                            <input type="password" id="password" required/>
                         </div>
                     </li>
                 </ul>
@@ -52,19 +52,19 @@
                     <li>
                         <div class="input-container">
                             <label for="last_name">LAST NAME</label>
-                            <input type="text" id="last_name" placeholder="Odinson"/>
+                            <input type="text" id="last_name" placeholder="Odinson" required/>
                         </div>
                     </li>
                     <li>
                         <div class="input-container">
                             <label for="phone_number">PHONE NUMBER</label>
-                            <input type="tel" id="phone_number"/>
+                            <input type="tel" id="phone_number" required/>
                         </div>
                     </li>
                     <li>
                         <div class="input-container">
                             <label for="confirm_password">CONFIRM PASSWORD</label>
-                            <input type="confirm_password" id="confirm_password"/>
+                            <input type="confirm_password" id="confirm_password" required/>
                         </div>
                     </li>
                 </ul>
