--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css"/>
+    <script src="index.js"></script>
     <title>Sign Up Form</title>
 </head>
 <body>
@@ -43,7 +44,7 @@
                     <li>
                         <div class="input-container">
                             <label for="password">PASSWORD</label>
-                            <input type="password" id="password" required/>
+                            <input type="password" id="password" required onkeyup="passwordMatch()"/>
                         </div>
                     </li>
                 </ul>
@@ -64,7 +65,7 @@
                     <li>
                         <div class="input-container">
                             <label for="confirm_password">CONFIRM PASSWORD</label>
-                            <input type="confirm_password" id="confirm_password" required/>
+                            <input type="password" id="confirm_password" required onkeyup="passwordMatch()"/>
                         </div>
                     </li>
                 </ul>
