Add text displaying if passwords match

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     </li>
                 </ul>
             </form>
+            <p class="password-match-text">* Passwords do not match</p>
         </div>
         <div class="create-account-container">
             <button class="create-account-button">Create Account</button>
